--- a/sistema de compras/nbproject/project.properties
+++ b/sistema de compras/nbproject/project.properties
@@ -26,6 +26,9 @@ dist.ear.war=${dist.dir}/${war.ear.name}
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 excludes=
+file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=..\\..\\..\\Downloads\\jakarta.servlet.jsp.jstl-2.0.0.jar
+file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=..\\..\\..\\Downloads\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
+file.reference.mysql-connector-j-8.0.33.jar=..\\..\\..\\Downloads\\mysql-connector-j-8.0.33.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -35,7 +38,9 @@ j2ee.platform.classpath=${j2ee.server.home}/bin/tomcat-juli.jar:${j2ee.server.ho
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
-    ${libs.MySQL_JDBC_Driver.classpath}
+    ${file.reference.mysql-connector-j-8.0.33.jar}:\
+    ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
+    ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
